styling aligned from page to page, color scheme fixed for each page, header and footer updated on every html page

--- a/assets/CSS/RV.css
+++ b/assets/CSS/RV.css
@@ -1,4 +1,4 @@
-/* base styles */
+base styles
 * {
   margin: 0;
   padding: 0;
@@ -7,14 +7,7 @@
   text-decoration: none;
 }
 
-.container {
-  color: #6f86ff;
-  text-align: center;
-  font-size: 50px;
-  text-align: center;
-  width: 100%;
-  margin: 0 auto;
-}
+
 
 .username-display {
   font-size: 50px;
@@ -44,7 +37,7 @@ body {
   max-width: 450px;
   position: fixed;
   top: 0;
-  right: -450px;
+  /* right: -450px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -128,70 +121,7 @@ nav {
 
 }
 
-#recipeResults {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 
-.recipe {
-width: 30%; /* Adjust as needed */
-display: inline-block;
-margin: 10px; /* Adjust spacing between recipes */
-padding: 10px;
-border: 1px solid #ccc;
-border-radius: 5px;
-}
 
-.recipe img {
-max-width: 100%;
-display: inline-flex ;
-height: auto;
-}
 
-.logo-and-search {
-display: flex;
-align-items: center;
-margin-right: auto; /* Pushes the search box and logo to the left */
-}
-
-#searchInput {
-margin-right: 10px; /* Adds space between search input and button */
-}
-
-.modal {
-display: none;
-position: fixed;
-z-index: 1;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-overflow: auto;
-background-color: rgba(0,0,0,0.5);
-}
-
-.modal-content {
-background-color: #fefefe;
-margin: 15% auto;
-padding: 20px;
-border: 1px solid #888;
-width: 80%;
-}
-
-.modal-content img {
-max-width: 100%;
-height: auto;
-}
-
-/* CSS to style the close button */
-#closeModalBtn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 20px;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
 
